Update Ex4, Ex5

--- a/Week2/Ex2/index.html
+++ b/Week2/Ex2/index.html
@@ -11,7 +11,7 @@
 
 <div class = "navbar">
   <div class="profile">
-    <h1 id="uni">PROFILE</h1>
+    <h1 id="uni2">PROFILE</h1>
     <span>I'm a student</span>
   </div>
 </div>
@@ -164,7 +164,7 @@
         <button  onclick="ChangeColor()">
             Change background color
         </button>
-    <input onclick="ChangeText()" type="submit" value="Change SV text" id="submit">
+    <input onclick="ChangeText2()" type="submit" value="Change SV text" id="submit">
     <hr>
     <span>4. </span>
     <b> Enter Date of Birth: <input type=date id = DOB> </b>  
