--- a/Week2/Ex4/index.html
+++ b/Week2/Ex4/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ex3</title>
+  <title>Ex4</title>
   <link rel="stylesheet" href="./styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
@@ -20,7 +20,8 @@
     <button class="k drum">k</button>
     <button class="l drum">l</button>
   </div>
-  <script type="text/javascript" src="./index.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
